--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,14 @@
             <artifactId>hadoop-mapreduce-client-core</artifactId>
             <version>2.2.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.hbase</groupId>
+            <artifactId>hbase-client</artifactId>
+            <version>0.96.2-hadoop2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
