--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.yinliang.maven</groupId>
-    <artifactId>HadoopLearning</artifactId>
+    <artifactId>big_data_learning</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
