--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,14 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>bijection-avro_2.10</artifactId>
+            <version>0.9.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka_2.10</artifactId>
-            <version>0.8.0</version>
+            <version>0.8.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
